Fix pill height spacing

--- a/style.css
+++ b/style.css
@@ -82,8 +82,7 @@ a.pill.selected {
 }
 
 .filterBy {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    line-height: 40px;
 }
 
 button {
